Fix Gradle compilation for recent changes.